2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	D po/nl.po:
	* po/LINGUAS:
	  - Remove broken translation upon request from gnome-nl.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* data/icons/hicolor/22x22/apps/xchat-gnome-message-nickname-said.png:
	A data/icons/hicolor/22x22/apps/xchat-gnome-status-halfop.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-message-new.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-status-operator.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-message-nickname-said.svg:
	* data/icons/hicolor/16x16/apps/xchat-gnome-message-nickname-said.png:
	A data/icons/hicolor/16x16/apps/xchat-gnome-status-halfop.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-message-new.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-status-operator.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-message-nickname-said.svg:
	  - Even awesomer nickname-said icon.  Also include source artwork.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/find-bar.c:
	D data/wrap.png:
	* data/Makefile.am:
	A data/icons/hicolor/16x16/apps/xchat-gnome-search-wrapped.png:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	  - Move wrap into the icon theme, why not.

2006-10-26  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/about.c:
	  - Add credits for Andreas & Lapo.  Whoo!

2006-10-26  David Trowbridge  <trowbrds@gmail.com>

	* plugins/notification/notification.c:
	* plugins/notify-osd/notify-osd.c:
	* src/fe-gnome/pixmaps.c:
	* src/fe-gnome/navigation-tree.c:
	* configure.ac:
	D data/op.png:
	D data/global-message.png:
	D data/newdata.png:
	D data/nicksaid.png:
	D data/hop.png:
	* data/Makefile.am:
	* data/icons/hicolor/48x48/apps:
	A data/icons/hicolor/22x22:
	A data/icons/hicolor/22x22/apps:
	A data/icons/hicolor/22x22/apps/xchat-gnome-message-nickname-said.png:
	A data/icons/hicolor/22x22/apps/xchat-gnome-status-halfop.png:
	A data/icons/hicolor/22x22/apps/xchat-gnome-message-new.png: